 HT ChangeLog
==============

version 2.0.11:
	- fixed crash while changing text highlighting
	- small bugs fixes
	
version 2.0.10:
	- [x86] SSE5 :)
	
version 2.0.9:
	- [Mach-O] ARM and X86_64 support
	- [Mach-O] support for 64 bit images
	- small bugs fixes

version 2.0.8:
	- Loading Analyser for java class files was broken
	- Fixed some cosmetic resizing bugs
	- Fixed infinite loop in fgetstrz

version 2.0.7:
	- Added a missing #include found by gcc 4.3
	- Fixed minor problems found by gcc 4.3

version 2.0.6:
	- [POSIX] Ignore mouse events
	- Dump analyser output function was broken
	- Fixed a lot of (possible) buffer overflows

version 2.0.5:
	- Editing bytes in image mode was broken under
	  subtile circumstances

version 2.0.4:
	- Fixed some 64 bit issues

version 2.0.3:
	- [POSIX] Resize application on SIGWINCH
	- [x86] SSE4.1/SSE4.2
	- [x86] small bug fixes
	- [x86] reduced opcode table bloat
	- Allow different displacements in hex view

version 2.0.2:
	- [IA64] disassembler works again (is anybody using this?)
	- [Java] fixed stupid undefined behaviour bug
	- [Java] use Signature information when available
	         (annotates generic functions etc.)

version 2.0.1:
	- [Java] annotate exception handlers in byte code
	- [Java] some byte code improvements (lookupswitch, tableswitch)
	- Analyser can export HTML files again
	- [PowerPC] added Cell and POWER6 instructions

version 2.0:
	- renamed process.h to htprocess.h because of some stupid
	  cygwin build problems
	- fixed some problem with file sizes > 4 GiB

version 2.0beta6:
	- fixed crash when opening read only files in obscure situations
	- [ELF & java] fixed binary search in image view
	- [ELF64] some cosmetic fixes
	- [java] off by one
	
version 2.0beta5:
	- [Win32] messed up file-saving code

version 2.0beta4:
	- fixed crash in cp-demangle
	- [Win32] Relax CPU

version 2.0beta3:
	- fixed crash in drop-down widget
	- fixed loading of class files
	- fixed generating text output files of analyser