@@ -2,8 +2,9 @@
 ==============
 
 version 2.0.11:
+	- [Win32] Save config in home directory
 	- fixed crash while changing text highlighting
-	- small bugs fixes
+	- small bug fixes
 	
 version 2.0.10:
 	- [x86] SSE5 :)
